--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,16 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import 'base/variables.scss';
 @import 'base/mixins.scss';
+
+body{
+background: rgb(30,87,153);
+background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(33,36,41,1) 0%, rgba(33,36,41,1) 25%, rgba(249,249,251,1) 25%, rgba(249,249,251,1) 100%, rgba(125,185,232,1) 100%);
+background: -webkit-linear-gradient(top, rgba(30,87,153,1) 0%,rgba(33,36,41,1) 0%,rgba(33,36,41,1) 25%,rgba(249,249,251,1) 25%,rgba(249,249,251,1) 100%,rgba(125,185,232,1) 100%);
+background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(33,36,41,1) 0%,rgba(33,36,41,1) 25%,rgba(249,249,251,1) 25%,rgba(249,249,251,1) 100%,rgba(125,185,232,1) 100%);
+background-repeat: no-repeat;
+background-size: 100% 100%;
+background-attachment: fixed;
+}
+.navbar.bg-dark{
+	background-color: $dark !important;
+}
